<resources>
    <string name="app_name">天气</string>
    <string name="login_title">登录</string>
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_hint_phone">请输入手机号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_register">注册</string>
    <string name="login_rememberPassword">记住密码</string>
    <string name="login_error">账号或密码错误</string>
    <string name="main_exitAgain">再次点击将退出系统</string>
    <string name="register_title">注册</string>
    <string name="register_toast_noPhone">手机号码必须填写</string>
    <string name="register_toast_noPassword">密码必须填写</string>
    <string name="register_toast_error">该手机号码已被注册</string>
    <string name="register_passwordHint">请再次输入密码</string>
    <string name="register_same">两次输入的密码必须一致</string>
    <string name="register_confirm">确认</string>
</resources>
