<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:visibility="gone"
        android:background="@color/colorPrimary">
        <TextView
            style="@style/appToolbarTitle"
            android:text="@string/login_title"/>
    </android.support.v7.widget.Toolbar>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/chuangko"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/login_account"
            android:textSize="15sp"
            android:textColor="@color/color_word1"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical" />

        <View
            style="@style/vertical_divider"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <EditText
            android:id="@+id/edit_login_phone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/color_word2"
            android:background="@null"
            android:textSize="15sp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginRight="15dp"
            android:inputType="number"
            android:hint="@string/login_hint_phone"/>
    </LinearLayout>
    <View
        style="@style/horizontal_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textSize="15sp"
            android:textColor="@color/color_word1"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"/>
        <View
            style="@style/vertical_divider"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <EditText
            android:id="@+id/edit_login_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/color_word2"
            android:background="@null"
            android:textSize="15sp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:inputType="textPassword"
            android:hint="@string/login_hint_password"
            android:layout_marginRight="15dp"/>
    </LinearLayout>

    <View
        style="@style/horizontal_divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:gravity="right"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:textColor="@color/color_word2"
            android:id="@+id/tv_login_goRegister" />

        <CheckBox
            android:id="@+id/check_login_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_rememberPassword"
            android:textColor="@color/color_word1"
            android:layout_marginRight="15dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg"
        android:text="@string/login_title"
        android:gravity="center"
        android:padding="12dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="90dp"/>


</LinearLayout>
